# zabrze

./: .editorconfig  Cargo.toml  LICENSE.md  README.md
.github/workflows/: build.yml  rust.yml
src/: main.rs  opt.rs
src/config/: abbrev.rs  config_path.rs  mod.rs  snippet.rs
src/expand/: mod.rs
src/init/: mod.rs  zabrze-bindkey.zsh  zabrze-init.zsh  zabrze.zsh
src/list/: mod.rs
test/: config.toml  config.yaml  integration_test.zsh
tests/: expand_test.rs  init_test.rs  mod.rs
tests/expand/: mod.rs
tests/expand/snapshots/: r#mod__expand__abort_on_error-unknown%.snap
tests/expand/testdata/abort_on_error/: config.toml
tests/expand/testdata/capture/: config.toml
tests/expand/testdata/conditional/: config.toml
tests/expand/testdata/context/: config.toml
tests/expand/testdata/global/: config.toml
tests/expand/testdata/legacy_yaml/: config.yaml
tests/expand/testdata/multi_files/: a.toml
tests/expand/testdata/placeholder/: config.toml
tests/helpers/: mod.rs
tests/init/: mod.rs
tests/init/snapshots/: r#mod__init__init --bind-keys.snap  r#mod__init__init.snap
tests/snapshots/: expand_test__abort_on_error-unknown%.snap  init_test__init --bind-keys.snap  init_test__init.snap
tests/testdata/action/: config.toml
tests/testdata/basic_toml/: config.toml
tests/testdata/evaluate/: config.toml
tests/testdata/legacy_yaml/: config2.yml
tests/testdata/multi_files/: b.toml
tests/testdata/symlink/: actual_config  config.toml
tests/testdata/trigger_pattern/: config.toml
