[package]
name = "zabrze"
version = "0.5.1"
authors = ['Ryooooooga <eial5q265e5@gmail.com>']
description = 'ZSH abbreviation exapansion plugin'
license = 'MIT'
readme = 'README.md'
repository = 'https://github.com/Ryooooooga/zabrze'
keywords = ['zsh', 'zsh-plugin']
edition = '2021'

[dependencies]
ansi_term = "0.12"
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
shell-escape = "0.1"
thiserror = "2.0"
